tests/tooling/fixtures/native/recovery/negative/negative_switch_case_arithmetic_unknown_conservative_reject.objc3
// Negative fixture: unresolved/non-literal arithmetic-expression forms remain conservative in switch case-body return-path analysis.
// Expected diagnostic code(s): O3S205.
module NegativeSwitchCaseArithmeticUnknownConservativeReject;

fn main() -> i32 {
  let value = 1;
  switch (value) {
    case 1:
      while ((value + 3) - 4) {
        return 9;
      }
    case 2:
      return 42;
    default:
      return 7;
  }
}
